Fix whitespace with css

--- a/assets/scss/search.scss
+++ b/assets/scss/search.scss
@@ -179,3 +179,6 @@ div.sui-select__placeholder {
     align-items: center;
     justify-content: center;
 }
+
+.inner-html-in-text::before{content: " ";}
+.inner-html-in-text::after{content: " ";}
